added e2e test for edit/delete post
